# TicTacToe

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: db.py  game.py  gameview.py  player.py
tests/: test_db.py  test_game.py  test_player.py
